<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNewEmp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add_new_emploees"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/emplogo"
        tools:layout_editor_absoluteX="1dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="364dp"
        android:layout_margin="10dp"
        android:layout_marginTop="3dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginStart="10dp"
        app:layout_goneMarginTop="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/name_of_employess"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmpUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/user_name_of_employess"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextempPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:password="true" />

        <EditText
            android:id="@+id/editTextempSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/sallary"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAddEmp"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:background="#FF5722"
            android:onClick="employees"
            android:text="Add"
            app:cornerRadius="12dp"
            tools:ignore="OnClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>